changes in page URL and checkout page

--- a/allergen-info.html
+++ b/allergen-info.html
@@ -13,7 +13,7 @@
 <body class="allergen-info">
 <a href="http://www.pizzahut.co.nz"><img src="images/Back-Button.png"></a>
   <div class="wrapper logo-wrapper">
-    <div class="pull-right"><a href="http://www.pizzahut.co.nz"><img alt="Pizza Hut" class="logo" src="images/logo.png"></a></div>
+    <div class="pull-right"><a href="http://www.pizzahut.co.nz"><img alt="KFC" class="logo" src="images/logo.png"></a></div>
     <div class="pull-left">
       <h1 class="title">Allergen Information</h1>
     </div>
