--- a/hashbites/index.html
+++ b/hashbites/index.html
@@ -1,6 +1,6 @@
-<html>
+﻿<html>
 <head>
-<title>Pizza Hut</title>
+<title>KFC</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- Google Analytics -->
     
