--- a/monitoring/index.html
+++ b/monitoring/index.html
@@ -1,6 +1,6 @@
-<html>
+﻿<html>
 <head>
-<title>Pizza Hut</title>
+<title>KFC</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 </head>
@@ -10,10 +10,10 @@
     
    
 	<tr>
-		<td> <font face="verdana" color="Red"> <br> <br> <br> <br>Pizza Hut </font></td>
+		<td> <font face="verdana" color="Red"> <br> <br> <br> <br>KFC</font></td>
 	</tr>
  	<tr>
-		<td> <font face="verdana" color="White"><br>Welcome to the Pizza Hut Monitoring Page <br><br></font></td>
+		<td> <font face="verdana" color="White"><br>Welcome to the KFC Monitoring Page <br><br></font></td>
 	</tr>
  
  	<tr>
